# home-finder

./: .gitignore  README.md  demo.ipynb  paths.npy  pyproject.toml
home_finder/: data.py  ensemble.py  image_analysis.py  return_best_images.py  similar_properties.py  skeleton.py  text_analysis.py
