[project]
name = "home-finder"
version = "0.0.1"
description = ""
authors = [
    {name = "theMetelle",email = "eleanor.smyth95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.dependencies]
pillow = "^11.3.0"
voyageai = "^0.3.5"
