[project]
name = "home-finder"
version = "0.0.1"
description = ""
authors = [
    {name = "theMetelle",email = "eleanor.smyth95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.dependencies]
pillow = "^11.3.0"
numpy = "^2.3.3"
scikit-learn = "^1.7.2"
pandas = "^2.3.2"
ultralytics = "^8.3.203"
pathlib = "^1.0.1"
logging = "^0.4.9.6"
requests = "^2.32.5"
tqdm = "^4.67.1"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"

[tool.setuptools.packages.find]
where = ["."]
include = ["home_finder"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
home_finder = ["yolov8s-world.pt"]
